--- a/huangxuemei/笔试/c++/内联函数.md
+++ b/huangxuemei/笔试/c++/内联函数.md
@@ -1,10 +1,15 @@
 
-如果一个函数是内联的，那么在编译时，编译器会把该函数的代码副本放置在每个调用该函数的地方。
-
+如果一个函数是内联的，那么在预处理的时候，编译器会把该函数的代码副本放置在每个调用该函数的地方，而不是在编译的时候进行函数的调用。
+**用inline修饰**
+```c++
+inline min(){
+//简单语句
+}
+```
 对内联函数进行任何修改，都需要重新编译函数的所有客户端，因为编译器需要重新更换一次所有的代码，否则将会继续使用旧的函数。
 
 解决代码运行时候的效率问题；
 
-- 内联函数内不允许使用循环语句和开关语句；
+- 内联函数内不允许使用循环语句；
 
 - 内联函数的定义必须出现在内联函数第一次调用之前；
