--- a/huangxuemei/图形学/PBR/白皮书/四、法线分布函数相关总结.md
+++ b/huangxuemei/图形学/PBR/白皮书/四、法线分布函数相关总结.md
@@ -48,14 +48,14 @@
 
 投影*D*(**m**)(n·m)是被归一化的：
 
-![image-20221108162933256](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108162933256.png)
+![[image-20221108162933256.png]]
 
 - Θ符号，表示在在整个球体上积分。
 - 以**n**为中心的半球上积分时，一般用Ω表示。实际上，图形学中使用的大多数微结构模型都是高度场（heightfields），这意味着对于Ω外的所有方向，**D(m)** = 0。 但是，上式也适用于非高度场微观结构。
 
 - **微观表面（microsurface）和宏观表面（macrosurface）在垂直于任何视图方向v的平面上的投影是相等的，可以理解为D(m)表示微表面中满足m等于h的微表面的比例，而D(m)(v*m)表示为v视角在这些微观法线上的投影，积分所有的法线的投影，因为正负值会在积分的过程中抵消掉，所以最后积分得到的最终值，与v向量直接在宏观法线n上投影值相等：**
 
-![image-20221108163230852](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108163230852.png)
+![[image-20221108163230852.png]]
 
 - 另外，上面两个积分公式中的点积不用被约束为大于等于0，因为投影会产生正负抵消，如下图所示。
 
@@ -75,23 +75,24 @@
 
 ![img](https://pic1.zhimg.com/80/v2-81af241fc41500f7b7665d445a9df378_720w.webp)
 
-![image-20221108164436631](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108164436631.png)
+![[image-20221108164436631.png]]
 
 - 上式中，通过x+的表示方法表达将**v · m**限制为大于等于0。 **背面微平面不可见（也就是m为-n的情况忽略掉）**，因此在这种情况下不计算它们。 乘积 G1(m,v)D(m) 则表示了可见法线的分布。
 
 # 法线分布函数的基本性质：
 
-- 微表面法线牡丹园始终为非负值：![image-20221108165501015](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108165501015.png)
-- 微表面的总面积始终不小于宏观表面的总面积（微表面的面积对于宏观来说不是光学平坦的，所以面积总会大些）：![image-20221108170110173](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108170110173.png)
-- 任何方向上微观表面投影面积始终与宏观表面投影面积相同：![image-20221108170214892](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108170214892.png)
+- 微表面法线牡丹园始终为非负值：![[image-20221108165501015.png]]
+- 微表面的总面积始终不小于宏观表面的总面积（微表面的面积对于宏观来说不是光学平坦的，所以面积总会大些）：![[image-20221108170110173.png]]
+- 任何方向上微观表面投影面积始终与宏观表面投影面积相同：![[image-20221108170214892.png]]
 
-- 若观察方向为法线方向，则其积分可以归一化。即v = n时，有：![image-20221108170310117](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108170310117.png)
+- 若观察方向为法线方向，则其积分可以归一化。即v = n时，有：![[image-20221108170310117.png]]
 
 # 各项同性NDF相关总结：
 
 ## Blinn—Phong：
 
-不具有形状不变性，主流的归一化：![image-20221108172835968](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108172835968.png)
+不具有形状不变性，主流的归一化：
+![[image-20221108172835968.png]]
 
 - 其中，幂αp是Blinn-Phong NDF的“粗糙度参数”;
   - 高值表示光滑表面，对于非常光滑的曲面，值可以任意高（一个完美的镜面αp=∞）
@@ -99,9 +100,9 @@
 
 - 通过非线性函数从中导出αp，αp=ms，其中s是【0，1】，m是项目的上限。
 
-ue4中![image-20221108174043121](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108174043121.png)得到的公式为：
+ue4中![[image-20221108174043121.png]]得到的公式为：
 
-![image-20221108174107566](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108174107566.png)
+![[image-20221108174107566.png]]
 
 ```c++
 float D_Blinn(float a2,float NoH)
@@ -113,9 +114,10 @@ float D_Blinn(float a2,float NoH)
 
 ## Beckmann分布：
 
-具有形状不变性，归一化之后：![image-20221108173502205](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108173502205.png)
+具有形状不变性，归一化之后：
+![[image-20221108173502205.png]]
 
-当Blinn—Phong中的αp为![image-20221108173600365](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108173600365.png)的时候Beckmann与Blinn—Phong等效。
+当Blinn—Phong中的αp为![[image-20221108173600365.png]]的时候Beckmann与Blinn—Phong等效。
 
 ```c++
 float D_Beckmann(float a2,float NoH)
@@ -149,7 +151,7 @@ float D_GGX(float a2,float NoH)
 
 ## GTR（Generalized-Trowbridge-Reitz）分布：
 
-![image-20221108175156716](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108175156716.png)
+![[image-20221108175156716.png]]
 
 disney在GXX上的扩展：
 
@@ -194,7 +196,7 @@ float D_GTR2(float alpha, float dotNH)
 
 若一个各向同性的NDF可以改写成以下形式，则这个NDF具有形状不变性：
 
-![image-20221108175607461](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108175607461.png)
+![[image-20221108175607461.png]]
 
 g（）代表一个表示了NDF形状的一维函数。
 
@@ -204,7 +206,7 @@ g（）代表一个表示了NDF形状的一维函数。
 
 ## 分类：
 
-![image-20221108180212025](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108180212025.png)
+![[image-20221108180212025.png]]
 
 ![img](https://pic4.zhimg.com/80/v2-e61aa94d023767b3d8b715294f9d9de3_720w.webp)
 
@@ -214,16 +216,18 @@ g（）代表一个表示了NDF形状的一维函数。
 
 常用的方法是从现有的各向同性的NDF进行推导，而推导的方法是通用的，可以应用于所有具有形状不变性的各向同性的NDF。
 
-具有形状不变性的NDF可以表示为以下形式：![image-20221108200258000](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108200258000.png)
+具有形状不变性的NDF可以表示为以下形式：
+![[image-20221108200258000.png]]
 
-其中g（）代表一个表示了NDF形状的一维函数。而通过此形式，可得到各向异性的（anisotropic）版本：![image-20221108200409991](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108200409991.png)
+其中g（）代表一个表示了NDF形状的一维函数。而通过此形式，可得到各向异性的（anisotropic）版本：
+![[image-20221108200409991.png]]
 
 - 其中，参数**αx**和**αy**分别表示沿切线（tangent）方向**t**和副法线（binormal）方向**b**的粗糙度。
 - 若**αx = αy**，则上式缩减回各向同性形式。
 
 ## 各向异性的Beckmann：
 
-![image-20221108200558856](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108200558856.png)
+![[image-20221108200558856.png]]
 
 - m为微表面法线
 - n为宏观法线
@@ -243,7 +247,7 @@ float D_Beckmann_aniso( float ax, float ay, float NoH, float3 H, float3 X, float
 
 ## 各项异性的GGX：
 
-![image-20221108200949221](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108200949221.png)
+![[image-20221108200949221.png]]
 
 ```c++
 float D_GGXaniso( float ax, float ay, float NoH, float3 H, float3 X, float3 Y )
@@ -259,7 +263,7 @@ float D_GGXaniso( float ax, float ay, float NoH, float3 H, float3 X, float3 Y )
 
 在迪士尼原理着色模型中，各向同性粗糙度参数*r*与第二标量参数*k*aniso组合，范围为[0,1]。 因此，根据这两个参数计算ax和ay：
 
-![image-20221108202008341](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108202008341.png)
+![[image-20221108202008341.png]]
 
 - 上式中的因子0.9将纵横比限制为10：1。
 
@@ -289,7 +293,7 @@ float D_GGX( float a2, float NoH )
 
 ## GGX分布的移动端性能优化：
 
-![image-20221108202602913](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108202602913.png)
+![[image-20221108202602913.png]]
 
 ```c++
 float D_GGX( float a2, float NoH )
@@ -304,7 +308,7 @@ float D_GGX( float a2, float NoH )
 - 当1.0 -NoH^2接近1时，NoH^2的计算会出现浮点数取消现象
 - NoH在1.0左右没有足够的精度。可以通过拉格朗日恒等式解决此问题，格朗日恒等式即
 
-![image-20221108202908233](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20221108202908233.png)
+![[image-20221108202908233.png]]
 
 由于n和h都是单位矢量，那么| n×h |^ 2 = 1-（n·h）^2。
 
