--- a/huangxuemei/数据结构/例题/从左往右的尝试模型（背包问题）.md
+++ b/huangxuemei/数据结构/例题/从左往右的尝试模型（背包问题）.md
@@ -19,7 +19,7 @@ int process(vector<int> w, vector<int> v, int index, int rest) {
     if (rest < 0) {
         return -1;
     }
-    //如果index等于w的长度，说明物品已经遍历完毕，但是bag还有富裕，这种情况下，产生对最大价值没有影响，所以返回0
+    //如果index等于w的长度，说明物品已经遍历完毕，没有可以装的货物了，所以返回0，表示没有装货物，这种情况下，产生对最大价值没有影响，所以返回0
     if (index == w.size()) {
         return 0;
     }
