--- a/huangxuemei/数据结构/哈希表.md
+++ b/huangxuemei/数据结构/哈希表.md
@@ -1,6 +1,2 @@
-### c++中的使用
-```c++
-//头文件引用
-#include <hash_map>
-//
-```
+哈希表的底层是**数组**实现的，主要是通过**哈希函数将关键字转换为数组下标，从而实现快速的随机存取**
+*因为是数组的，所以扩充来说比较复杂，所以当哈希表的内存不够的时候，速率会下降*
