网易笔记转移

--- a/huangxuemei/games101/材质和外观.md
+++ b/huangxuemei/games101/材质和外观.md
@@ -6,7 +6,7 @@
 
 **fr、Li、Lo都是定值**，将他们从积分中提出来，cos对立体角求积分（由于是表面的半球所以是pi），所以可以得到fr的表达式，**fr的值与albedo的颜色有关，albedo=Lo/Li**
 
-![image-20220414192312448](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20220414192312448.png)
+![[image-20220414192312448.png]]
 
 ### 反射计算：
 
