--- a/huangxuemei/games101/欧拉方法.md
+++ b/huangxuemei/games101/欧拉方法.md
@@ -6,7 +6,7 @@
 
 在已知位置和时间的情况下，我们可以直接得到在场中的该粒子的速度。![image-20220426114443399](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20220426114443399.png)
 
-![image-20220426114357782](C:\Users\huangxuemei\AppData\Roaming\Typora\typora-user-images\image-20220426114357782.png)
+![[image-20220426114357782.png]]
 
 ### 欧拉方法：
 
